@@ -2,8 +2,11 @@ bingd 0.4
 ===========
 
 * Update to AnnotationHub 2.0
+
 * Add AnnotationHubList class to store related groups AnnotationHub objects
 * Add AnnotationHub and AnnotationHubList methods to calc.enrich()
+* Add AnnotationHub method to findOverlaps()
+* Add AnnotationHub and AnnotationHubList methods to featureOverlaps()
 ============
 
 * improve performance of calc.enrich()
